crates/rome_js_formatter/tests/specs/prettier/typescript/keywords/module.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\keywords\\module.ts"
---

# Input

```js
module Y3 {
  public module Module {
      class A { s: string }
  }

  // Apparently this parses :P
  export private public protected static readonly abstract async enum X { }

  interface x {
      export private static readonly [x: any]: any;
  }
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,14 +1,23 @@
 module Y3 {
-  public module Module {
+  public
+  module Module {
     class A {
       s: string;
     }
   }
 
   // Apparently this parses :P
-  export private public protected static readonly abstract async enum X {}
+  export
+  private
+  public
+  protected
+  static
+  readonly;
+  abstract;
+  async;
+  enum X {}
 
   interface x {
-    export private static readonly [x: any]: any;
+      export private static readonly [x: any]: any;
   }
 }
```

# Output

```js
module Y3 {
  public
  module Module {
    class A {
      s: string;
    }
  }

  // Apparently this parses :P
  export
  private
  public
  protected
  static
  readonly;
  abstract;
  async;
  enum X {}

  interface x {
      export private static readonly [x: any]: any;
  }
}
```


# Errors
```
module.ts:2:3 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of reserved keyword `public` as an identifier in strict mode
  
    ┌─ module.ts:2:3
    │
  2 │   public module Module {
    │   ^^^^^^
  
module.ts:2:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ module.ts:2:10
    │
  2 │   public module Module {
    │          ^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ module.ts:2:3
    │
  2 │   public module Module {
    │   ^^^^^^^^^^^^^
  
module.ts:7:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a class, a function, or a variable declaration but instead found 'private'
  
  × Expected a class, a function, or a variable declaration here
  
    ┌─ module.ts:7:10
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │          ^^^^^^^
  
module.ts:7:18 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ module.ts:7:18
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                  ^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ module.ts:7:10
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │          ^^^^^^^^^^^^^^
  
module.ts:7:25 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ module.ts:7:25
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                         ^^^^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ module.ts:7:18
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                  ^^^^^^^^^^^^^^^^
  
module.ts:7:35 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ module.ts:7:35
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                                   ^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ module.ts:7:25
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                         ^^^^^^^^^^^^^^^^
  
module.ts:7:42 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ module.ts:7:42
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                                          ^^^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ module.ts:7:35
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                                   ^^^^^^^^^^^^^^^
  
module.ts:7:51 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ module.ts:7:51
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                                                   ^^^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ module.ts:7:42
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                                          ^^^^^^^^^^^^^^^^^
  
module.ts:7:60 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ module.ts:7:60
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                                                            ^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ module.ts:7:51
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                                                   ^^^^^^^^^^^^^^
  
module.ts:7:66 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ module.ts:7:66
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                                                                  ^^^^
  
  i ...Which is required to end this statement
  
    ┌─ module.ts:7:60
    │
  7 │   export private public protected static readonly abstract async enum X { }
    │                                                            ^^^^^^^^^^
  
module.ts:10:14 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × ';' expected'
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ module.ts:10:14
     │
  10 │       export private static readonly [x: any]: any;
     │              ^^^^^^^
  
module.ts:10:22 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × index signature members cannot be static
  
     ┌─ module.ts:10:22
     │
  10 │       export private static readonly [x: any]: any;
     │                      ^^^^^^
  

```


